# plikter

./: .gitignore  CMakeLists.txt  Cargo.toml  cargo_build.py  platformio.ini
pcb/: plikter-B_Cu.gbr  plikter-Edge_Cuts.gbr  plikter-F_Cu.gbr  plikter-NPTH.drl  plikter-PTH.drl  plikter.kicad_pcb  plikter.pro  plikter.sch
pcb/plikter/: plikter-B_Cu.gbr  plikter-F_Cu.gbr  plikter-cache.lib  plikter.kicad_pcb  plikter.kicad_pcb-bak  plikter.sch-bak
src/: bitmaps.h  lib.rs  main.cpp  serial.rs
